--- a/Aula009/styles9.css
+++ b/Aula009/styles9.css
@@ -1,89 +1,103 @@
 @import url('https://fonts.googleapis.com/css2? family= Roboto:ital,wght@0,400;0,900;1,300;1,700;1,900 & display=swap');
-*{
-font-family: 'Roboto', sans-serif;
-margin: 0; padding: 0; border: 0;
-text-align: center;
+
+* {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    text-align: center;
 }
 }
+
 li {
     list-style: none;
     display: inline-block;
-    margin: right 14px; 
+    margin: right 14px;
     text-transform: capitalize;
-    font-weight:300;
-    background-color:#0055aa;
-    color:#fff ;
+    font-weight: 300;
+    background-color: #0055aa;
+    color: #fff;
 }
+
 ul {
     text-align: center;
     width: 100%;
-   
+
 }
-header{
+
+header {
     background-color: #0055aa;
     height: 50px;
 }
+
 a {
     color: whitesmoke;
-    
+
 }
-ul{
-    
+
+ul {
+
     list-style: none;
     background-color: #0055aa;
     text-align: center;
     width: 100%;
-    box-shadow: -3px 13px 30px -5px rgba(0,0,0,0.63);
+    box-shadow: -3px 13px 30px -5px rgba(0, 0, 0, 0.63);
 }
 
-a{    
+a {
     color: white;
-    text-decoration: none;        
+    text-decoration: none;
 }
 
-li{
+li {
     height: 100%;
     display: inline-block;
-    padding: 1.5em;  
+    padding: 1.5em;
 }
+
 header {
     position: sticky;
     z-index: 1;
 }
+
 .blocoazul {
-background-color: #0055aa;
-width: 100%;
-height: auto;
-padding: 4em;
-color: aliceblue;
-display: grid;
- justify-content: space-around;
-grid-template-columns: 20em 20em 20em;  
-gap: 3em;  
+    background-color: #0055aa;
+    width: 100%;
+    height: auto;
+    padding: 4em;
+    color: aliceblue;
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: 20em 20em 20em;
+    gap: 3em;
 
 }
+
 footer {
-background-color: #0055aa;
-width: 100%;
-height: auto;
-padding: 4em;
-color: aliceblue;
+    background-color: #0055aa;
+    width: 100%;
+    height: auto;
+    padding: 4em;
+    color: aliceblue;
 }
+
 .imagem {
     display: grid;
     margin: 10px;
     padding: 10px;
     width: 100%;
-        background-color: white;
-        display: grid;
-        justify-content: space-around;
-        grid-template-columns: 20em 20em 20em;  
-        gap: 3em;
+    background-color: white;
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: 20em 20em 20em;
+    gap: 3em;
 
 }
-img{
+
+img {
     width: 100%;
 }
+
 .zap {
     width: 3%;
     height: auto;
@@ -92,6 +106,5 @@ img{
     right: 0;
     margin: 2em;
     z-index: 2;
-    box-shadow: -3px 13px 30px -5px rgba(0,0,0,0.63);
-}
+    box-shadow: -3px 13px 30px -5px rgba(0, 0, 0, 0.63);
 }
